Card and Skills Done

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,6 @@
 #app {
   color:#264543;
   font-weight: normal;
-  font-family:'Times New Roman', Times, serif;
+  font-family: 'Roboto', sans-serif;
   font-size:16px;
 }
